k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: micro
spec:
  replicas: 1
  selector:
    matchLabels:
      component: userservice
  template:
    metadata:
      labels:
        component: userservice
    spec:
      containers:
        - name: userservice
          image: 975050024946.dkr.ecr.us-east-1.amazonaws.com/jsree-userservice:user
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
