k8s/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
  namespace: micro
spec:
  type: ClusterIP
  selector:
    component: gatewayservice
  ports:
    - protocol: TCP
      port: 3003       # cluster port
      targetPort: 3003 # container port React is listening on
