k8s/oder-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  namespace: micro
spec:
  type: ClusterIP
  selector:
    component: orderservice
  ports:
    - protocol: TCP
      port: 3002      # cluster port
      targetPort: 3002 # container port React is listening on
