k8s/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: productservice
  namespace: micro
spec:
  type: ClusterIP
  selector:
    component: productservice
  ports:
    - protocol: TCP
      port: 3001        # cluster port
      targetPort: 3001 # container port React is listening on
