k8s/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: micro
spec:
  type: ClusterIP
  selector:
    component: userservice
  ports:
    - protocol: TCP
      port: 3000         # cluster port
      targetPort: 3000 # container port React is listening on
